    the lazy loader to fire off on pending objects without a
    flush taking place, as well as a transient object that's
    been manually "attached" to the session. Note that this
    flag blocks attribute events from taking place when an
    object is loaded, so backrefs aren't available until
    after a flush. The flag is only intended for very
    specific use cases.
    
  - Slight improvement to the behavior of
    "passive_updates=False" when placed only on the
    many-to-one side of a relationship; documentation has
    been clarified that passive_updates=False should really
    be on the one-to-many side.

  - Placing passive_deletes=True on a many-to-one emits
    a warning, since you probably intended to put it on
    the one-to-many side.
  
  - Fixed bug that would prevent "subqueryload" from
    working correctly with single table inheritance 
    for a relationship from a subclass - the "where 
    type in (x, y, z)" only gets placed on the inside,
    instead of repeatedly.
    
  - When using from_self() with single table inheritance,
    the "where type in (x, y, z)" is placed on the outside
    of the query only, instead of repeatedly.   May make
    some more adjustments to this.

  - scoped_session emits a warning when configure() is 
    called if a Session is already present (checks only the
    current thread) [ticket:1924]
    
- sql
   - Table.tometadata() now copies Index objects associated
     with the Table as well.

   - Table.tometadata() issues a warning if the given Table 
     is already present in the target MetaData - the existing
     Table object is returned.

   - An informative error message is raised if a Column 
     which has not yet been assigned a name, i.e. as in 
     declarative, is used in a context where it is
     exported to the columns collection of an enclosing
     select() construct, or if any construct involving
     that column is compiled before its name is 
     assigned.
